--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js"
      integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 
-    <title>Starter Template for Bootstrap</title>
+    <title>The Shabbat Notificator</title>
+    <meta http-equiv="refresh" content="30" />
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -62,10 +63,13 @@
     <main role="main" class="container">
 
       <div class="container">
-        <h1>Title of this section</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br>
-          All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Shabbat Notificator</h1>
+
+        <!-- weather widget start --><div id="m-booked-small-t1-69405"> <div class="booked-weather-120x100 w100-bg" style="background-color:#FFFFFF; color:#333333; border-radius:4px; -moz-border-radius:4px; width:118px !important;"> <a target="_blank" style="background-color:#2373CA; color:#FFFFFF;" href="https://hotelmix.fr/weather/vincennes-6679" class="booked-weather-120x100-city">Vincennes</a> <a target="_blank" class="booked-weather-120x100-bottom" href="https://www.booked.net/"><img src="//s.bookcdn.com/images/letter/s5.gif" alt="https://www.booked.net/" /></a> <div class="booked-weather-120x100-degree w18"><span class="plus">+</span>18&deg;<sub class="booked-weather-120x100-type">C</sub></div> <div class="booked-weather-120x100-high-low"> <p>Max: <span class="plus">+</span>18&deg;</p> <p>Min: <span class="plus">+</span>17&deg;</p> </div> <div style="background-color:#FFFFFF; color:#333333;" class="booked-weather-120x100-date">Jeu., 26.09.2019</div> </div> </div><script type="text/javascript"> var css_file=document.createElement("link"); css_file.setAttribute("rel","stylesheet"); css_file.setAttribute("type","text/css"); css_file.setAttribute("href",'https://s.bookcdn.com/css/w/bw-120-100.css?v=0.0.1'); document.getElementsByTagName("head")[0].appendChild(css_file); function setWidgetData(data) { if(typeof(data) != 'undefined' && data.results.length > 0) { for(var i = 0; i < data.results.length; ++i) { var objMainBlock = document.getElementById('m-booked-small-t1-69405'); if(objMainBlock !== null) { var copyBlock = document.getElementById('m-bookew-weather-copy-'+data.results[i].widget_type); objMainBlock.innerHTML = data.results[i].html_code; if(copyBlock !== null) objMainBlock.appendChild(copyBlock); } } } else { alert('data=undefined||data.results is empty'); } } </script> <script type="text/javascript" charset="UTF-8" src="https://widgets.booked.net/weather/info?action=get_weather_info&ver=6&cityID=6679&type=11&scode=124&domid=581&anc_id=6992&cmetric=1&wlangID=3&color=ffffff&wwidth=118&header_color=2373ca&text_color=333333&link_color=ffffff&border_form=0&footer_color=ffffff&footer_text_color=333333&transparent=0"></script><!-- weather widget end -->
+
+        <iframe src="https://api-ratp.pierre-grimaud.fr/v4/schedules/rers/A/fontenay%2Bsous%2Bbois/A" height="800"/>
       </div>
+
 
     </main><!-- /.container -->
 
