--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         </div>
     </nav>
 
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12">
+          <iframe src="http://192.168.1.21/index.php?v=d&p=view&view_id=2" frameborder="0" width="100%" height="400px"></iframe>
+        </div>
+      </div>
+    </div>
     <main role="main" class="container">
 
       <div class="container">
